// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Strike Bracket 1`] = `
Array [
  0.7,
  0,
  0.08071,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Strike Bracket 2`] = `
Array [
  0.1596,
  0,
  0.035,
  0,
  0.1596,
  -0.0483,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Strike Bracket 3`] = `
Array [
  0.1596,
  0,
  0.12971,
  0,
  0.1596,
  -0.0483,
  0,
  0,
  1,
]
`;
